# game-of-life

./: CMakeLists.txt  README.md
include/: common.h  conway.h  display.h  game_of_life.h
src/: display.cpp  game_of_life.cpp  main.cpp
